manifest/objects/Apttus__WizardInputGroup__c.object
<CustomObject>
    <description>Groups input controls within a step</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Input Group within a Step is Active. Setting Step as Active automatically activates the included Input Groups.</description>
        <inlineHelpText>Signifies that the Input Group within a Step is Active. Setting Step as Active automatically activates the included Input Groups.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Repeatable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the input group is a repeatable instance</description>
        <inlineHelpText>Indicates that the input group is a repeatable instance</inlineHelpText>
        <label>Repeatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>Sequence of Input Group within a step.</description>
        <inlineHelpText>Sequence of Input Group within a step.</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Table__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this is a tabular/horizontal group</description>
        <inlineHelpText>Indicates this is a tabular/horizontal group</inlineHelpText>
        <label>Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Transient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Input group added to a step is in Transient state till the Step is saved.</description>
        <inlineHelpText>Input group added to a step is in Transient state till the Step is saved.</inlineHelpText>
        <label>Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardStepId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the wizard step that this group belongs</description>
        <inlineHelpText>Lookup to the wizard step that this group belongs</inlineHelpText>
        <label>Wizard Step</label>
        <referenceTo>Apttus__WizardStep__c</referenceTo>
        <relationshipName>Wizard_Input_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Input Group (Deprecated)</label>
    <nameField>
        <label>Wizard Input Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Input Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>